--- a/exercises/DE_edgeR.Rmd
+++ b/exercises/DE_edgeR.Rmd
@@ -16,7 +16,16 @@ set.seed("1492")
 
 As usual, make sure we have the right packages for this exercise
 
-```{r ready-packages, results="hide",message=FALSE}
+```{r ready-packages}
+if (!require("pacman")) install.packages("pacman"); library(pacman)
+
+# let's load all of the files we were using and want to have again today
+p_load("tidyverse", "knitr", "readr",
+       "pander", "BiocManager", 
+       "dplyr", "stringr")
+
+# We also need the Bioconductor packages "Rsubread" for today's activity.
+p_load("edgeR", "org.Sc.sgd.db")
 
 list.of.packages <- c("tidyverse", "here", "knitr", "pander", "BiocManager", "reactable")
 
